# SoC_system

./: CMakeLists.txt  README.md  abstandmesser.jc4  acquisition.c
firmware/include/: i2c_treiber.h  spi_treiber.h
firmware/src/: i2c_treiber.c  main.c  oled_25664.c  spi_treiber.c
firmware/src/OLED_Display_Library/src/: oled_25664.c
